--- a/form/index.html
+++ b/form/index.html
@@ -459,7 +459,7 @@
   </header>
 
   <main id="main fill">
-    <form method="POST" action="/form/success.html" data-netlify="true" enctype="multipart/form-data" id="paymentForm">
+    <form method="POST" action="/form/success/" data-netlify="true" enctype="multipart/form-data" id="paymentForm">
         <input type="text" name="Name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your email (the one you made payment with)" required>
         <input type="text" name="message" placeholder="Custom Message">
@@ -561,4 +561,5 @@
     setInterval(createParticle, 3000);
   </script>
 </body>
+
 </html>
