--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>$5 Design Landing Page</title>
+  <title>$5 Premium Design Fix</title>
   <link rel="stylesheet" href="style.css">
   <style>
     * {
@@ -165,6 +165,7 @@ nav {
   backdrop-filter: blur(10px);
   opacity: 0;
   animation: fadeInUp 0.8s ease 0.6s forwards;
+  z-index: 100;
 }
 
 .cta-btn::before {
